# ai-hacklab-starter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  requirements.txt
a2a/: README.md  server.py  watchdog.py
agent-factory/: README.md
agent-factory/blueprints/analysis-worker/: worker.py
agent-factory/blueprints/gpu-worker/: worker.py
agents/: README.md
agents/alpha/: Dockerfile  README.md  agent_card.py  skill_handlers.py
agents/beta/: Dockerfile  README.md  agent_card.py  skill_handlers.py
agents/delta/: Dockerfile  README.md  agent_card.py  skill_handlers.py
agents/gamma/: Dockerfile  README.md  agent_card.py  skill_handlers.py
dispatch/: README.md  agent_registry.example.json  key_pools.example.json  mesh_dispatcher.py  spend_tracker.py
docker/: README.md  docker-compose.yml  litellm_config.example.yaml
docs/: adding-an-agent.md  architecture.md  model-routing.md  operations.md  security.md
mcp/: README.md  research_notes.py
pipeline/: telemetry.py
queue/: README.md  mesh_queue.py  monitor.py  worker.py
rust/: Cargo.toml  README.md
rust/crates/a2a-client/: Cargo.toml
rust/crates/a2a-client/src/: client.rs  executor.rs  lib.rs  registry.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  error.rs  sse.rs  types.rs
rust/crates/mesh-agent/: Cargo.toml
rust/crates/mesh-agent/src/: main.rs
rust/crates/mesh-queue/: Cargo.toml
rust/crates/mesh-queue/src/: checkpoint.rs  circuit.rs  dedup.rs  envelope.rs  lib.rs  lock.rs  queue.rs  rate_limit.rs  worker.rs
rust/crates/router/: Cargo.toml
rust/crates/router/src/: anthropic.rs  cost.rs  lib.rs  openai.rs  provider.rs  selector.rs  spend.rs  types.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: lib.rs
rust/crates/scanner/: Cargo.toml
rust/crates/scanner/src/: lib.rs  main.rs  worker.rs
scouts/: PLAYBOOK.md  README.md  checkpoint.py  dedup.py  distributed_lock.py  iris_cantina_scout.py  matrix_reporter_base.py  rate_limiter.py  rate_scout.py  redis_config.py  scout_state.py  scout_status.py
scouts/atlas/: ATLAS.md  atlas_seed.py
scouts/hermes/: HERMES.md  hermes_seed.py
scouts/mnemosyne/: MNEMOSYNE.md  cot_publisher.py  meshtastic_tak_bridge.py  mnemosyne_seed.py
scouts/q/: Q.md  q_enhanced.py  q_matrix_reporter.py  q_seed.py
scouts/ratchet/: RATCHET.md  ratchet_seed.py
tests/: test_skill_handlers.py
tools/model_router/: README.md  benchmark.py  model_selector.py  task_classifier.py
totp/: README.md  generate_seed.py
