[package]
name = "a2a-client"
description = "A2A JSON-RPC mesh client — token+TOTP auth, retry/backoff, ToolExecutor impl"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5", features = ["gen_secret"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[lints]
workspace = true
