[package]
name = "mesh-agent"
description = "Standalone agent binary — ConversationRuntime + A2AToolExecutor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mesh-agent"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
a2a-client = { path = "../a2a-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[lints]
workspace = true
