[package]
name = "mesh-agent"
description = "Standalone agent binary — ConversationRuntime + A2AToolExecutor + multi-provider LLM router"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "mesh-agent"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
a2a-client = { path = "../a2a-client" }
router = { path = "../router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
