[package]
name = "mesh-queue"
description = "Redis-backed mesh queue — async Tokio, dead-letter, BRPOP worker loop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
