[package]
name = "router"
description = "Multi-provider LLM router — replaces LiteLLM + mesh_dispatcher + model_selector"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[lints]
workspace = true
