[package]
name = "runtime"
description = "Agent conversation runtime — turn loop, session, permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
